--- a/demo/index.html
+++ b/demo/index.html
@@ -25,7 +25,7 @@
 
 		<p>
 			<label for="numberInput">Number <small>(min 10, max 20, step 1)</small></label><br />
-			<input type="number" id="numberInput" name="numberInput" value="" min="10" max="20" step="1" />
+			<input type="number" id="numberInput" name="numberInput" value="12" min="10" max="20" step="1" />
 		</p>
 
 		<p>
