Optional field in demo

--- a/demo/index.html
+++ b/demo/index.html
@@ -19,8 +19,13 @@
 
 	<form id="theForm" action="#">
 		<p>
-			<label for="textInput">Text <small>(required)</small></label><br />
-			<input type="text" id="textInput" name="textInput" value="" required="" maxlength="20" />
+			<label for="textInput">Text <small>(optional)</small></label><br />
+			<input type="text" id="textInput" name="textInput" value="" />
+		</p>
+
+		<p>
+			<label for="textInput">Text <small>(required and max length 20)</small></label><br />
+			<input type="text" id="textInput" name="textInput" value="" required="required" maxlength="20" />
 		</p>
 
 		<p>
