--- a/demo/index.html
+++ b/demo/index.html
@@ -2,12 +2,17 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8" />
-	<title>Simple form demo - formerly</title>
+	<title>Basic form demo - formerly</title>
 	<link href="styles.css" media="screen" rel="stylesheet" type="text/css" />
 	<script src="../formerly.js" type="text/javascript"></script>
 	<script type="text/javascript">
 		window.onload = function () {
 			formerly.init();
+			
+			var polyfillStatus = document.getElementById("polyfillStatus");
+			if (polyfillStatus && formerly.isPolyfilling) {
+				polyfillStatus.innerHTML = "by formerly";
+			}
 		}
 	</script>
 
@@ -15,7 +20,12 @@
 
 <body>
 
-	<h1>Simple form demo with formerly</h1>
+	<h1>Basic form demo</h1>
+		
+	<p>
+		You are currently experiencing the validations as implemented <strong id="polyfillStatus">by your browser</strong>.<br />
+		Formerly's validations will only be used in browsers that do not support HTML5 form validations themselves.
+	</p>
 
 	<form id="theForm" action="#">
 		<p>
@@ -29,8 +39,8 @@
 		</p>
 
 		<p>
-			<label for="numberInput">Number <small>(min 10, max 20, step 1)</small></label><br />
-			<input type="number" id="numberInput" name="numberInput" value="12" min="10" max="20" step="1" />
+			<label for="numberInput">Number <small>(min 10, max 20, step 2)</small></label><br />
+			<input type="number" id="numberInput" name="numberInput" value="12" min="10" max="20" step="2" />
 		</p>
 
 		<p>
@@ -44,12 +54,13 @@
 		</p>
 
 		<p>
-			<label for="patternInput">IP-address <small>(using pattern)</small></label><br />
+			<label for="patternInput">IP-address <small>(pattern 0.0.0.0)</small></label><br />
 			<input type="text" id="patternInput" name="patternInput" value="" pattern="\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3}" />
 		</p>
 		
-		<p>
-			<button type="submit" id="submitButton">Submit</button>
+		<p class="buttonRow">
+			<button type="submit" id="submitButton">Submit</button><br />
+			<small>(Does nothing, apart from validation.)</small>
 		</p>
 	</form>
 
