Included date and time fields in demo

--- a/demo/index.html
+++ b/demo/index.html
@@ -57,6 +57,26 @@
 			<label for="patternInput">IP-address <small>(pattern 0.0.0.0)</small></label><br />
 			<input type="text" id="patternInput" name="patternInput" value="" pattern="\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3}" />
 		</p>
+
+		<p>
+			<label for="dateInput">Date <small>(yyyy-mm-dd)</small></label><br />
+			<input type="date" id="dateInput" name="dateInput" value="" />
+		</p>
+
+		<p>
+			<label for="timeInput">Time <small>(hh:mm:ss)</small></label><br />
+			<input type="time" id="timeInput" name="timeInput" value="" />
+		</p>
+
+		<p>
+			<label for="datetimeInput">Date and time <small>(yyyy-mm-ddThh:mm:ssZ)</small></label><br />
+			<input type="datetime" id="datetimeInput" name="datetimeInput" value="" />
+		</p>
+
+		<p>
+			<label for="datetimeLocalInput">Date and time local <small>(yyyy-mm-ddThh:mm:ss)</small></label><br />
+			<input type="datetime-local" id="datetimeLocalInput" name="datetimeLocalInput" value="" />
+		</p>
 		
 		<p class="buttonRow">
 			<button type="submit" id="submitButton">Submit</button><br />
